# dcthemefactory

./: README.md  __init__.py  dc_theme_factory.py  pyproject.toml  test.py
src/dc_theme_factory/: __init__.py  dc_theme_factory.py
